bee-common/bee-common-derive/tests/packable/fail/invalid_ty_enum.stderr
error: Tags for enums can only be sized integers.
  --> $DIR/invalid_ty_enum.rs:10:17
   |
10 | #[packable(ty = [u8; 32])]
   |                 ^^^^^^^^
